---
title: 插件内部结构类图
config:
  theme: base
  themeVariables:
    primaryColor: "#e8e8e6"
    primaryTextColor: "#1a1a1a"
    primaryBorderColor: "#8b8b8b"
    lineColor: "#6b7280"
    fontSize: 14
---
classDiagram
    class BusinessPlugin {
        +string id
        +string displayName
        +string systemPrompt
        +AgentTool[] tools
        +FieldMeta[] fields
        +validate(form) ValidationResult
        +submitApi(form) Promise~SubmitResult~
        +startProcessApi(id, form) Promise~ProcessResult~
        +string[] confirmTools
        +Record confirmLabels
        +string[] suggestions
        +PipelineStep[] pipeline
    }

    class FieldMeta {
        +string key
        +string label
        +string type
        +boolean required
        +string[] options
    }

    class ValidationResult {
        +boolean valid
        +string[] errors
    }

    class SubmitResult {
        +boolean success
        +string resultId
        +string message
    }

    class ProcessResult {
        +boolean success
        +string processId
        +string message
    }

    class PipelineStep {
        +string key
        +string label
        +string icon
    }

    BusinessPlugin --> FieldMeta : fields
    BusinessPlugin --> ValidationResult : validate
    BusinessPlugin --> SubmitResult : submitApi
    BusinessPlugin --> ProcessResult : startProcessApi
    BusinessPlugin --> PipelineStep : pipeline